# frontik

./: .codecov.yaml  .coveragerc  .gitignore  .hh-release.yaml  .project  .pydevproject  .travis.yml  CODEOWNERS  MANIFEST.in  README.md  TODO  catalog-info.yaml  changelog.yaml  coverage-run.sh  dev_run.py  fetchurl.uml  frontik-test  frontik.cfg.ex  frontik.zargo  frontik_dev.cfg.ex  frontik_srv.py  frontik_srv.sh  make_release.sh  poetry.toml  pyproject.toml  request.uml  request.umlseq  request_response.uml  requirements.txt  requirements_kafka.txt  requirements_sentry.txt  requirements_venv.txt  ruff-fix.sh  run-coverage.sh  run_bamboo_tests.sh  run_frontik.sh  setup.py  supervisor-brokenapp  supervisor-keepaliveapp  supervisor-nodebug  (+5 more)
.forgejo/workflows/: security_scan.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: cache-cleanup.yml  python-package.yml
benchmark/: example_app_load.py  pyproject.toml
debian/: README.Debian  changelog  control  copyright  frontik-version.sh  init.d  init.d.ex  init.d.lsb.ex  install  logrotate  postinst.ex  postrm.ex  preinst.ex  prerm.ex  python-frontik.install  python3-frontik.install  rules  version-bump.sh
docker/: Dockerfile.building
docs/: README.md  arguments-validation.md  config-app.md  config.md  configs.md  debug.md  dependency_injection.md  frontik-app.md  http-balancing.md  http-client.md  http_client.md  logging.md  migration-guide.md  page-generation.md  postprocessing.md  preprocessors.md  producers.md  pydevd.md  routing.md  running.md  server.md  service-urls.md  supervisor.md  testing.md
docs/producers/: json.md  text.md  xml.md
examples/: README.md  example-run.py  export_openapi.py  frontik.cfg  frontik_cfg.py  run_example.py
examples/example_app/: __init__.py  config.py
examples/example_app/fastapi/: __init__.py
frontik/: __init__.py  adisp.py  app.py  async.py  auth.py  balancing_client.py  compat.py  config_parser.py  consul.py  consul_client.py  debug.py  debug.xsl  dependency_manager.py  dev_route_manager.py  doc.py  example_app_load.py  fastapi_integration.py  file_cache.py  frontik_logging.py  frontik_response.py  future.py  futures.py  globals.py  handler.py  handler_active_limit.py  handler_asgi.py  handler_debug.py  handler_return_values.py  handler_whc_limit.py  handler_xml.py  handler_xml_debug.py  http_client.py  http_codes.py  http_status.py  jobs.py  json_builder.py  json_holder.py  magic_imp.py  media_types.py  micro_handler.py  (+25 more)
frontik/app_integrations/: __init__.py  gc_metrics_collector.py  kafka.py  scylla.py  sentry.py  sentry_tornado_integration.py  settings_client.py  slow_callback_tracker.py  statsd.py  telemetry.py
frontik/boksh/: main.py  service.py
frontik/debug/: debug-css.xsl  debug-js.xsl  debug.xsl  highlight-css.xsl  highlight-js.xsl  vkbeautify-js.xsl
frontik/dependencies/: __init__.py  http_client.py  statsd_client.py
frontik/dependency_manager/: __init__.py  dependencies.py  graph_builder.py  graph_runner.py
frontik/http_client/: __init__.py  handler.py  protobuf.py
frontik/integrations/: __init__.py  gc_metrics_collector.py  influxdb.py  kafka.py  sentry.py  service_discovery.py  slow_callback_tracker.py  statsd.py  telemetry.py  telemetry_instr_frontik.py  test_integration.py
frontik/loggers/: __init__.py  fixed_syslog_handler.py  influxdb.py  metrics.py  request.py  sentry.py  stages.py  statsd.py  timings.py
frontik/producers/: __init__.py  asgi_json_producer.py  json.py  json_producer.py  middleware.py  xml_producer.py  xsl.py
frontik/request_integrations/: __init__.py  clients.py  integrations_dto.py  request_context.py  request_id.py  request_limiter.py  sentry.py  server_timing.py  telemetry.py
frontik/server/: __init__.py  supervisor.py
frontik/testing/: __init__.py  config.py  frozen_dict.py  json_asserts.py  service_mock.py  test_utils.py  xml_asserts.py
frontik/util/: __init__.py  abc.py  fastapi.py  gc.py  generate_openapi.py  json.py  xml.py
production/: frontik.cfg  frontik.ini
scripts/: frontik
src/: analyze_xscript.py  coev_segfault_on_switch2scheduler.py  debug.xsl  frontik.cfg.ex  frontik.dev.ini  frontik.ini.ex  frontik.py  frontik_dev.cfg  frontik_dev.cfg.ex  frontik_srv.py  frontik_supervisor.py  hhscript.py  test_coev_http_client.py  test_doc.py  test_integration.py  test_magic_imp.py
src/frontik/: __init__.py  app.py  async.py  auth.py  basic_auth.py  debug.xsl  doc.py  future.py  handler.py  handler_debug.py  handler_whc_limit.py  handler_xml.py  handler_xml_debug.py  helpers.py  http.py  http_client.py  import.py  importer.py  jobs.py  log.py  magic_imp.py  new_urlencode.py  server.py  thread_pool.py  util.py  version.py  xml_util.py
src/frontik_www/: banners.py  career_menu.xml  config.py  config_chernenko.py  foot.py  handler.py  head.py  menu.py  translations.py  util.py
src/hh/: __init__.py  config.py  doc.py  foot.py  head.py  http_client.py  menu.py  translations.py  util.py
src/test/: frontik.cfg
src/test_mfd/: client.py  server.py
tests/: __init__.py  __main__.py  conftest.py  instances.py  integration_util.py  stub.json  stub.xml  stub_missing.xml  test_add_handler_params.py  test_app.py  test_arguments.py  test_async.py  test_async_task.py  test_asyncgroup.py  test_asyncgroup_handler.py  test_balancer.py  test_broken_app.py  test_codestyle.py  test_consul_registration.py  test_cookies.py  test_debug.py  test_debug_curl_string.py  test_default_urls.py  test_dependencies.py  test_dev_route_manager.py  test_doc.py  test_doc_handler.py  test_errors.py  test_fail_fast.py  test_file_cache.py  test_file_logging.py  test_finish_with_content.py  test_finish_with_postprocessors.py  test_frontik_testing.py  test_handle_returned_value.py  test_handler.py  test_handler_returned_value_processing.py  test_http_client.py  test_http_client_balancer.py  test_http_client_keep_alive.py  (+65 more)
tests/projects/: frontik.cfg  frontik_consul_mock.cfg  frontik_debug.cfg  frontik_dev_config.cfg  frontik_keep_alive.cfg  frontik_no_debug.cfg  frontik_non_debug.cfg  frontik_non_debug_mode.cfg
(+302 files in other folders)
