[build-system]
requires = ['poetry-core>=1.5.1']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'frontik'
version = '9.1.11'
description = 'Frontik is an asyncronous Tornado-based application server'
authors = ['platform <platform@hh.ru>']
repository = 'https://forgejo.pyn.ru/hhru/frontik'
homepage = 'https://forgejo.pyn.ru/hhru/frontik'
readme = 'README.md'

[[tool.poetry.source]]
name = "pypi-mirror"
url = "https://devpi.pyn.ru/root/pypi/+simple/"
priority = "primary"

[[tool.poetry.source]]
name = "hhdev"
url = "https://devpi.pyn.ru/hh/hhdev/+simple/"
priority = "explicit"

[tool.poetry.scripts]
frontik = 'frontik.server:main'
frontik-generate-openapi = 'frontik.util.generate_openapi:main'

[tool.poetry.dependencies]
python = '>=3.9,<3.14'
aiohttp = '3.11.11'
lxml = '5.3.0'
pydantic = '^2.3.0'
tornado = '6.3.3'
orjson = '*'
packaging = '<25.0'
http-client = {git = 'git+ssh://git@forgejo.pyn.ru/hhru/balancing-http-client.git', tag = '3.0.9'}
consul = {git = 'git+ssh://git@forgejo.pyn.ru/hhru/python-consul2', tag = '1.0.0'}
opentelemetry-sdk = '1.25.0'
opentelemetry-api = '1.25.0'
opentelemetry-exporter-otlp-proto-grpc = '1.25.0'
opentelemetry-instrumentation-fastapi = '0.46b0'
opentelemetry-instrumentation-aiohttp-client = '0.46b0'
opentelemetry-instrumentation-tornado = '0.46b0'
fastapi = '0.115.2'
aiokafka = '0.12.0'
acsylla='1.0.0'
sentry-sdk = '>=2.7,<3'
python-multipart = "^0.0.16"
pyyaml = { version = "6.0.2", optional = true }
types-pyyaml = { version = "6.0.2", optional = true }

[tool.poetry.group.test.dependencies]
pytest = '8.3.3'
pytest-asyncio = '0.24.0'
requests = '>=2.0'
types-requests = '2.31.0.8'
tox = '4.6.4'
lxml-asserts = '0.1.2'
exceptiongroup = '1.2.0'
pystolint = '0.2.13'
httpx = ">=0.22"

[tool.poetry.extras]
sentry = ["sentry-sdk"]
testing = ["tornado-httpclient-mock"]
openapi = ["pyyaml", "types-pyyaml"]

[tool.pytest.ini_options]
addopts = '''
  --tb native
  --asyncio-mode=auto
  -p no:warnings
'''

[tool.mypy]
exclude = [
    '.*/api/2.*',
    'tests/test_process_fork.py',
    'http_client',
    'frontik/request_integrations/telemetry.py',
]


[tool.ruff]
exclude = [
    'sentry_tornado_integration.py',
    'frontik/request_integrations/telemetry.py',
    'frontik/request_integrations/sentry.py',
]

[tool.ruff.lint.isort]
known-third-party = ['http_client']

[tool.ruff.lint]
ignore = [
    'FA100',
]
